fixed bg img not showing on customisation page

--- a/src/CSS/Fabrics.css
+++ b/src/CSS/Fabrics.css
@@ -11,13 +11,11 @@
 } */
 
 .fabric {
-  color: white;
   background-image: url("https://images.unsplash.com/photo-1603251579431-8041402bdeda?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80");
   background-position-x: -110px;
   background-position-y: top;
   background-size: 68vh;
   height: 100vh;
-  color: white;
   font-family: "Roboto";
   display: inline-block;
 }
@@ -67,8 +65,8 @@ img {
 } */
 .InstaCard {
   list-style: none;
-  width: 250px;
-  height: 500px;
+  width: 300px;
+  height: 480px;
   border-style: solid;
   border-color: grey;
   border-width: 1px;
@@ -82,6 +80,7 @@ img {
   font-family: "Roboto";
   top: 70vh;
   display: inline-block;
+  color: white;
 }
 /* .ItemTitleBanner {
   list-style: none;
